// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CentredScreen should render with a forest footer image 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CenteredScreen
    footerImage="forest"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <View
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "width": "100%",
            }
          }
        >
          <Component
            resizeMode="cover"
            source={
              Object {
                "testUri": "../../../assets/centred-screen/forestBackground.png",
              }
            }
            style={
              Object {
                "height": 400,
                "width": "100%",
              }
            }
          />
        </View>,
        undefined,
      ],
      "style": Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "flex": 1,
        "flexDirection": "column",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Component
            resizeMode="cover"
            source={
              Object {
                "testUri": "../../../assets/centred-screen/forestBackground.png",
              }
            }
            style={
              Object {
                "height": 400,
                "width": "100%",
              }
            }
          />,
          "style": Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "width": "100%",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "resizeMode": "cover",
            "source": Object {
              "testUri": "../../../assets/centred-screen/forestBackground.png",
            },
            "style": Object {
              "height": 400,
              "width": "100%",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      undefined,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <View
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "width": "100%",
              }
            }
          >
            <Component
              resizeMode="cover"
              source={
                Object {
                  "testUri": "../../../assets/centred-screen/forestBackground.png",
                }
              }
              style={
                Object {
                  "height": 400,
                  "width": "100%",
                }
              }
            />
          </View>,
          undefined,
        ],
        "style": Object {
          "alignItems": "center",
          "backgroundColor": "white",
          "flex": 1,
          "flexDirection": "column",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Component
              resizeMode="cover"
              source={
                Object {
                  "testUri": "../../../assets/centred-screen/forestBackground.png",
                }
              }
              style={
                Object {
                  "height": 400,
                  "width": "100%",
                }
              }
            />,
            "style": Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "width": "100%",
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "resizeMode": "cover",
              "source": Object {
                "testUri": "../../../assets/centred-screen/forestBackground.png",
              },
              "style": Object {
                "height": 400,
                "width": "100%",
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        undefined,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`CentredScreen should render with a gray forest footer image 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CenteredScreen
    footerImage="gray_forest"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <View
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "width": "100%",
            }
          }
        >
          <Component
            resizeMode="cover"
            source={
              Object {
                "testUri": "../../../assets/centred-screen/gray-forest.png",
              }
            }
            style={
              Object {
                "height": 600,
                "marginBottom": 0,
                "width": "100%",
              }
            }
          />
        </View>,
        undefined,
      ],
      "style": Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "flex": 1,
        "flexDirection": "column",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Component
            resizeMode="cover"
            source={
              Object {
                "testUri": "../../../assets/centred-screen/gray-forest.png",
              }
            }
            style={
              Object {
                "height": 600,
                "marginBottom": 0,
                "width": "100%",
              }
            }
          />,
          "style": Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "width": "100%",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "resizeMode": "cover",
            "source": Object {
              "testUri": "../../../assets/centred-screen/gray-forest.png",
            },
            "style": Object {
              "height": 600,
              "marginBottom": 0,
              "width": "100%",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      undefined,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <View
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "width": "100%",
              }
            }
          >
            <Component
              resizeMode="cover"
              source={
                Object {
                  "testUri": "../../../assets/centred-screen/gray-forest.png",
                }
              }
              style={
                Object {
                  "height": 600,
                  "marginBottom": 0,
                  "width": "100%",
                }
              }
            />
          </View>,
          undefined,
        ],
        "style": Object {
          "alignItems": "center",
          "backgroundColor": "white",
          "flex": 1,
          "flexDirection": "column",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Component
              resizeMode="cover"
              source={
                Object {
                  "testUri": "../../../assets/centred-screen/gray-forest.png",
                }
              }
              style={
                Object {
                  "height": 600,
                  "marginBottom": 0,
                  "width": "100%",
                }
              }
            />,
            "style": Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "width": "100%",
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "resizeMode": "cover",
              "source": Object {
                "testUri": "../../../assets/centred-screen/gray-forest.png",
              },
              "style": Object {
                "height": 600,
                "marginBottom": 0,
                "width": "100%",
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        undefined,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`CentredScreen should render with a large forest footer image 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CenteredScreen
    footerImage="large_forest"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <View
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "width": "100%",
            }
          }
        >
          <Component
            resizeMode="cover"
            source={
              Object {
                "testUri": "../../../assets/centred-screen/largeForest.png",
              }
            }
            style={
              Object {
                "height": 600,
                "marginBottom": 0,
                "width": "100%",
              }
            }
          />
        </View>,
        undefined,
      ],
      "style": Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "flex": 1,
        "flexDirection": "column",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Component
            resizeMode="cover"
            source={
              Object {
                "testUri": "../../../assets/centred-screen/largeForest.png",
              }
            }
            style={
              Object {
                "height": 600,
                "marginBottom": 0,
                "width": "100%",
              }
            }
          />,
          "style": Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "width": "100%",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "resizeMode": "cover",
            "source": Object {
              "testUri": "../../../assets/centred-screen/largeForest.png",
            },
            "style": Object {
              "height": 600,
              "marginBottom": 0,
              "width": "100%",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      undefined,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <View
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "width": "100%",
              }
            }
          >
            <Component
              resizeMode="cover"
              source={
                Object {
                  "testUri": "../../../assets/centred-screen/largeForest.png",
                }
              }
              style={
                Object {
                  "height": 600,
                  "marginBottom": 0,
                  "width": "100%",
                }
              }
            />
          </View>,
          undefined,
        ],
        "style": Object {
          "alignItems": "center",
          "backgroundColor": "white",
          "flex": 1,
          "flexDirection": "column",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Component
              resizeMode="cover"
              source={
                Object {
                  "testUri": "../../../assets/centred-screen/largeForest.png",
                }
              }
              style={
                Object {
                  "height": 600,
                  "marginBottom": 0,
                  "width": "100%",
                }
              }
            />,
            "style": Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "width": "100%",
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "resizeMode": "cover",
              "source": Object {
                "testUri": "../../../assets/centred-screen/largeForest.png",
              },
              "style": Object {
                "height": 600,
                "marginBottom": 0,
                "width": "100%",
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        undefined,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`CentredScreen should render with a mountain footer image 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CenteredScreen
    footerImage="challenge_failed_forest"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <View
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "width": "100%",
            }
          }
        >
          <Component
            resizeMode="cover"
            source={
              Object {
                "testUri": "../../../assets/centred-screen/challenge_failed_forest.png",
              }
            }
            style={
              Object {
                "height": 600,
                "marginBottom": 0,
                "width": "100%",
              }
            }
          />
        </View>,
        undefined,
      ],
      "style": Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "flex": 1,
        "flexDirection": "column",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Component
            resizeMode="cover"
            source={
              Object {
                "testUri": "../../../assets/centred-screen/challenge_failed_forest.png",
              }
            }
            style={
              Object {
                "height": 600,
                "marginBottom": 0,
                "width": "100%",
              }
            }
          />,
          "style": Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "width": "100%",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "resizeMode": "cover",
            "source": Object {
              "testUri": "../../../assets/centred-screen/challenge_failed_forest.png",
            },
            "style": Object {
              "height": 600,
              "marginBottom": 0,
              "width": "100%",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      undefined,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <View
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "width": "100%",
              }
            }
          >
            <Component
              resizeMode="cover"
              source={
                Object {
                  "testUri": "../../../assets/centred-screen/challenge_failed_forest.png",
                }
              }
              style={
                Object {
                  "height": 600,
                  "marginBottom": 0,
                  "width": "100%",
                }
              }
            />
          </View>,
          undefined,
        ],
        "style": Object {
          "alignItems": "center",
          "backgroundColor": "white",
          "flex": 1,
          "flexDirection": "column",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Component
              resizeMode="cover"
              source={
                Object {
                  "testUri": "../../../assets/centred-screen/challenge_failed_forest.png",
                }
              }
              style={
                Object {
                  "height": 600,
                  "marginBottom": 0,
                  "width": "100%",
                }
              }
            />,
            "style": Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "width": "100%",
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "resizeMode": "cover",
              "source": Object {
                "testUri": "../../../assets/centred-screen/challenge_failed_forest.png",
              },
              "style": Object {
                "height": 600,
                "marginBottom": 0,
                "width": "100%",
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        undefined,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`CentredScreen should render without any props 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CenteredScreen />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        null,
        undefined,
      ],
      "style": Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "flex": 1,
        "flexDirection": "column",
      },
    },
    "ref": null,
    "rendered": Array [
      null,
      undefined,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          null,
          undefined,
        ],
        "style": Object {
          "alignItems": "center",
          "backgroundColor": "white",
          "flex": 1,
          "flexDirection": "column",
        },
      },
      "ref": null,
      "rendered": Array [
        null,
        undefined,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
